# yeppoh

./: .gitignore  ARCHITECTURE.md  Dockerfile  MANIFESTO.md  README.md  THESIS.md  pyproject.toml  requirements.txt  train.py  visualize.py
DROPS/2026-phylum-i/: README.md  manifest.json
DROPS/2026-phylum-i/creatures/: README.md
configs/: default.yaml
configs/brain/: reactive.yaml  social.yaml
configs/creature/: blob.yaml  coral.yaml  jellyfish.yaml
configs/reward/: growth.yaml  locomotion.yaml
configs/training/: ippo.yaml  mappo.yaml
experiments/: 01_basic_blob.py  02_locomotion.py  03_growth.py  jellyfish_vignette.py  phylum1_sculpt.py
notebooks/: 00_playground.ipynb
scripts/: cloud_setup.sh  cloud_sync.sh  modal_train.py  train.py  visualize.py  visualize_solo.py
sculpture/: __init__.py  env.py  mesh_ops.py  rewards.py
yeppoh/: __init__.py
yeppoh/body/: __init__.py  actuators.py  creature.py  materials.py  morphology.py
yeppoh/brain/: __init__.py  communication.py  drives.py  encoder.py  memory.py  policy.py  world_model.py
yeppoh/env/: __init__.py  agent_manager.py  multi_agent.py  rewards.py  scene.py
yeppoh/export/: __init__.py  gallery.py  mesh.py  video.py
yeppoh/senses/: __init__.py  chemoreception.py  echolocation.py  proprioception.py  touch.py  vision.py
yeppoh/solo/: __init__.py  env.py  policy.py  ppo.py  runner.py
yeppoh/training/: __init__.py  algorithms.py  callbacks.py  curriculum.py  runner.py
yeppoh/world/: __init__.py  energy.py  pheromones.py  reaction_diffusion.py  stimuli.py
(+2 files in other folders)
